--- a/vignettes/Suggested_plantTracker_Workflow.Rmd
+++ b/vignettes/Suggested_plantTracker_Workflow.Rmd
@@ -18,11 +18,11 @@ knitr::opts_chunk$set(
 ```
 
 ```{r setup, include = FALSE}
-#library(plantTracker)
+library(plantTracker)
 library(ggplot2)
 library(sf)
-library(devtools)
-load_all()
+# library(devtools)
+# load_all()
 ```
 
 
