--- a/README.Rmd
+++ b/README.Rmd
@@ -13,23 +13,35 @@ knitr::opts_chunk$set(
 )
 ```
 
-# plantTracker
-Welcome to plantTracker! This package was designed to transform long-term 
+# `plantTracker`
+Welcome to `plantTracker`! This package was designed to transform long-term 
 quadrat maps that show plant occurrence and size into demographic data that can 
 be used to answer questions about population and community ecology. 
-This vignette is designed to help you use plantTracker functions to move from a 
-spatially referenced dataset containing plant cover data, to an output dataset 
-that contains growth and survival data for each observed individual. 
 
-This vignette will walk you through the steps to get from maps of plant cover 
-to a demographic dataset that you can use for analysis!
+# `plantTracker`
+Welcome to `plantTracker`! This package was designed to transform **long-term quadrat maps** that show plant occurrence and size into **demographic data** that can 
+be used to answer questions about population and community ecology. 
 
-<!-- badges: start -->
-<!-- badges: end -->
+## Table of Contents 
+* [Installing `plantTracker`](#Installation)
+* [How to Use `plantTracker`](#how_to_use)
+  * [Prepare data for use in `plantTracker`](#prep_data)
+    * [The quadrat map data: `dat`](#dat_data)
+      * [transform `dat` to the `sf` format](#dat_to_sf)
+    * [The quadrat inventory data: `inv` ](#dat_inv)
+  * [Ensure data is in the correct format with `checkDat()` ](#check_dat)
+  * [Track individuals through time using `trackSpp()`](#trackSpp)
+    * [Arguments in `trackSpp()`](#trackSpp_args)
+    * [Understanding the output of `trackSpp()`](#trackSpp_out)
+  * [Calculate local neighborhood density using `getNeighbors()`](#getNeigh)
+    * [Arguments in `getNeighbors()`](#getNeigh_args)
+    * [Understanding the output of `trackSpp()`](#getNeigh_out)
+  * [Further analysis with more `plantTracker` functions](#next)
 
-## Installation
+<a id="Installation"></a>
 
-You can install the development version of plantTracker from 
+## Installation 
+You can install the development version of `plantTracker` from 
 [GitHub](https://github.com/) with: 
 
 ``` r
@@ -37,14 +49,15 @@ install.packages("devtools")
 devtools::install_github("aestears/plantTracker")
 ```
 
-plantTracker will also be available to download form CRAN in the near future 
+`plantTracker` will also be available to download form CRAN in the near future 
 (hopefully...), so stay tuned! 
 
+<a id="how_to_use"></a>
 
-## How to use the plantTracker R package
-The material below explains how to use plantTracker, starting with formatting 
+## How to use the `plantTracker` R package
+The material below explains how to use `plantTracker`, starting with formatting 
 your data correctly. This information is also available in the 'Suggested 
-plantTracker Workflow' vignette, which is included in the package. 
+`plantTracker` Workflow' vignette, which is included in the package. 
 
 ```{r setup, include = FALSE}
 library(plantTracker)
@@ -52,7 +65,9 @@ library(ggplot2)
 library(sf)
 ```
 
-## *1.* Prepare data
+<a id="prep_data"></a>
+
+### *1.* Prepare data
 The functions in `plantTracker` require data in a specific format. `plantTracker`
 includes an example dataset that consists of two pieces: `grasslandData` and 
 `grasslandInventory`. You can load these example datasets into your global 
@@ -66,9 +81,11 @@ from now on will call `dat`. The second is a list that contains a vector of
 years in which each quadrat was sampled, which we from now on will cal `inv`. 
 Below are the basic requirements for these data objects.
 
-### *1.1* The `dat` data frame must . . .
+<a id="dat_data"></a>
 
-*  ... be an `sf` data.frame. More on this below in section *1.1.1*...
+#### *1.1* The `dat` data frame must . . .
+
+*  ... be an `sf` data.frame. More on this below in section [*1.1.1*](#dat_to_sf")...
 *  ... contain a row for each individual observation in each year. 
 *  ... have a column that contains character strings indicating the specific
 epithet for each observation. This column must be a character data type. The 
@@ -121,10 +138,9 @@ rownames(dataShow) <- NULL
 "geometry". The additional columns "Type" and "sp_code_6" are just "along for 
 the ride" in any analysis using `plantTracker` functions. 
 
-
 Here's what some of the example `dat` data (from the "SG2" quadrat at the 
 "AZ" site in 1922) look like when plotted spatially:    
-```{r, echo = FALSE,  fig.width=8, fig.align = 'center', fig.cap = "**Figure 1.1** *: Spatial map of a subset of example 'dat' dataset*"}
+```{r, echo = FALSE,  fig.width=7, fig.align = 'center', fig.cap = "Figure 1.1 : Spatial map of a subset of example 'dat' dataset"}
 exampleDat <- grasslandData[grasslandData$Site == "AZ" & 
                               grasslandData$Quad == "SG2" & 
                               grasslandData$Year == 1922, ]
@@ -156,7 +172,9 @@ each time point for each organism (or ramet), and is accompanied by the required
 metadata detailed above. For example, `plantTracker` functions could be used to 
 estimate tree demographic rates at the scale of 100 m x 50 m plots.
 
-#### *1.1.1* Get your data into the `sf` data format 
+<a id="dat_to_sf"></a>
+
+##### *1.1.1* Get your data into the `sf` data format 
 As mentioned above, `plantTracker` uses the `sf` R package to deal with spatial 
 data. The map data that `plantTracker` was built to analyze is inherently spatial, 
 so you need to know how to the basics of dealing with spatial data in R if you 
@@ -262,8 +280,9 @@ for (i in 1:2){#length(quadNames)) {
 # Now, all of the spatial data are in one sf data frame, and are ready to be used in plantTracker functions! 
 ```
 
+<a id="dat_inv"></a>
 
-### *1.2* The `inv` list must . . .
+#### *1.2* The `inv` list must . . .
 
 * ... be a named list
 * ... have element names that are each a character string identical to the name 
@@ -284,7 +303,7 @@ don't put an 'NA' in `inv` for that year! Instead, just skip that year.
 Here is an example of an `inv` argument that corresponds to the example `dat` 
 argument above. The quadrats that have data in `dat` are "SG2" and "SG4",  so 
 there are elements in `inv` that correspond to each of these quadrats. 
-```{r echo=FALSE, fig.align='center', fig.cap = "**Figure 1.2**: *An example of the `inv` argument*"}
+```{r echo=FALSE, fig.align='center', fig.cap = "Figure 1.2: An example of the `inv` argument"}
 (inv <- grasslandInventory[c( "SG2", "SG4")])
 ```
 
@@ -309,7 +328,9 @@ quadInv_list <- as.list(quadInv_DF)
 (quadInv_list <- lapply(X = quadInv_list, FUN = function(x) x[is.na(x) == FALSE]))
 ```
 
-### *1.3* Check the `inv` and `dat` arguments  using `checkDat()`
+<a id="check_dat"></a>
+
+#### *1.3* Check the `inv` and `dat` arguments  using `checkDat()`
 The generic `checkDat()` function: 
 ```r
 checkDat(dat, inv = NULL, species = "Species", site = "Site", quad = "Quad",
@@ -344,7 +365,9 @@ your data is ready for the next step. The default value is FALSE.
 
 ___
 
-## *2* Track individuals through time using `trackSpp()`
+<a id="trackSpp"></a>
+
+### *2* Track individuals through time using `trackSpp()`
 Now it's time to transform your raw dataset into demographic data! This is 
 accomplished using the `trackSpp()` function. This function follows individual 
 plants from year to year in the same quadrat to determine survival, size in the 
@@ -362,7 +385,9 @@ trackSpp(dat, inv, dorm, buff, buffGenet, clonal, species = "Species",
   shrink = 0.1, dormSize = 0.05, ...)
 ```
 
-### *2.1* Function arguments
+<a id="trackSpp_args"></a>
+
+#### *2.1* Function arguments
 `trackSpp()` takes the following arguments:  
 
 * **`dat`** This is the `sf` data frame that we've been calling `dat` so far. This 
@@ -396,7 +421,7 @@ scenario, in years 3 and 4 there are not polygons of species "A" that are in the
 same location as our focal individual, but there is a polygon in year 4 that 
 overlaps our focal individual. If `dorm = 1`, then our focal individual would 
 get a "0" for survival, but if `dorm = 2`, then it would get a 1 for survival. 
-```{r echo = FALSE, fig.width=8, fig.align = 'center', fig.cap = "**Figure 2.1**: *A visualization of the 'dormancy' scenario described above.*"}
+```{r echo = FALSE, fig.width=8, fig.height=3, fig.align = 'center', fig.cap = "Figure 2.1: A visualization of the 'dormancy' scenario described above."}
 
 exampleSmall <- exampleDat[unique(c(30, 42, 44, 25,  2, 61, 59, 52, 45,  8, 42, 37, 60, 34, 45, 38, 26, 49, 52, 46)),]
 
@@ -429,8 +454,9 @@ ggplot(data = exampleSmall) +
   theme_classic() +
   theme(axis.line = element_blank(), 
         legend.text = element_text(face = "italic"),
-        plot.margin = margin(1,0,1,0),
-        legend.title = element_blank()) +
+        plot.margin = margin(.5,0,.5,0),
+        legend.title = element_blank()
+        ) +
   scale_fill_discrete(type = c("#E69F00", "#A6A6A6", "#009E73"))  +
   scale_color_discrete(type = c("#E69F00", "#A6A6A6", "#009E73"))
 ```
@@ -474,7 +500,7 @@ data in `dat` is measured in meters, and you want to allow a plant to "move"
 `buff = .15` in your call to `trackSpp()`. If you want to allow no movement, use 
 `buff = 0`. Below is a visualization of two different `buff` scenarios.
 
-```{r echo = FALSE, warning= FALSE, fig.width=8, fig.align = 'center', fig.cap = "**Figure 2.2**: *With a 10 cm buffer, these polygons in 1922 and 1923 overlap and will be identified by trackSpp() as the **same** individual and receive the same trackID.*"}
+```{r echo = FALSE, warning= FALSE, fig.width=7, fig.height = 3, fig.align = 'center', fig.cap = "Figure 2.2: With a 10 cm buffer, these polygons in 1922 and 1923 overlap and will be identified by trackSpp() as the **same** individual and receive the same trackID."}
 
 exampleDat <- grasslandData[grasslandData$Site == "AZ" & 
                               grasslandData$Quad == "SG2" & 
@@ -520,7 +546,7 @@ ggplot(data = exampleDatIDs
   scale_linetype_manual(values=c("twodash", "solid", "dotted"))
 ```  
 
-```{r echo = FALSE, warning= FALSE, fig.width=8, fig.align = 'center', fig.cap = "**Figure 2.3**: *With a 3 cm buffer, these polygons in 1922 and 1923 don't quite overlap, so will be identified by trackSpp() as **different** individuals and receive different trackIDs.*"}
+```{r echo = FALSE, warning= FALSE, fig.width=7, fig.height = 3, fig.align = 'center', fig.cap = "Figure 2.3: With a 3 cm buffer, these polygons in 1922 and 1923 don't quite overlap, so will be identified by trackSpp() as **different** individuals and receive different trackIDs."}
 
 exampleBuffed <- st_buffer(exampleDatIDsTemp[round(exampleDatIDsTemp$Area, 7) ==0.0005472,], dist = .03)
 exampleBuffed$Year <- 1922
@@ -682,7 +708,9 @@ this individual is large enough to survive dormancy. The default value is
 
 These are all of the possible arguments to `trackSpp()`! 
 
-### *2.2* Function output
+<a id="trackSpp_out"></a> 
+
+#### *2.2* Function output
 Below is an example of a potential function call to `trackSpp()`, using 
 the example `dat` and `inv` data we've used so far. :  
 ```{r}
@@ -723,7 +751,9 @@ below for some additional useful data.
 
 ___
 
-## *3* Calculate local neighborhood density using `getNeighbors()`
+<a id="getNeigh"></a> 
+
+### *3* Calculate local neighborhood density using `getNeighbors()`
 It is often useful in demographic analyses to have some idea of the competition 
 (or facilitation) that an individual organism is dealing with. Interactions 
 between individuals can have a profound impact on whether an organism survives 
@@ -740,7 +770,9 @@ getNeighbors(dat, buff, method, compType = "allSpp", output = "summed",
   site = "Site", geometry = "geometry", ...)
 ```
 
-### *3.1* Function options and arguments
+<a id="getNeigh_args"></a>
+
+#### *3.1* Function options and arguments
 The `getNeighbors()` function in `plantTracker` calculates local neighborhood 
 density for each unique individual in your dataset. A user-specified buffer is 
 drawn around each individual, and then the function counts the number of other 
@@ -774,7 +806,7 @@ the number or area of neighbors, or whether it is actually
 a list that provides the neighborhood density for each species present in the 
 neighborhood. 
 
-```{r echo = FALSE, fig.width=7, fig.align = 'center', fig.cap = "**Figure 3.1**: *This individual outlined in pink is a focal individual, and the pale pink shows a 10 cm buffer around it.*"}
+```{r echo = FALSE, fig.width=6, fig.align = 'center', fig.cap = "Figure 3.1: This individual outlined in pink is a focal individual, and the pale pink shows a 10 cm buffer around it."}
 datComp <- datTrackSpp[datTrackSpp$Year == 1922,]
 
 ggplot(datComp) +
@@ -804,7 +836,7 @@ areaMethod <- areaMethodTemp[st_is(areaMethodTemp, c("POLYGON", "MULTIPOLYGON"))
 
 ```
 
-```{r echo = FALSE, warnings = FALSE, fig.width=7, fig.align = 'center', fig.cap = "**Figure 3.2**: *The 10cm buffer around the focal individual overlaps with 5 other unique individuals of two species. These overlapping individuals are outlined in dark grey. Using the 'count' method in `getNeighbors()`, we would get an intraspecific competition value of 3, and an interspecific competition value of 5.*"}
+```{r echo = FALSE, warnings = FALSE, fig.width=6, fig.align = 'center', fig.cap = "Figure 3.2: The 10cm buffer around the focal individual overlaps with 5 other unique individuals of two species. These overlapping individuals are outlined in dark grey. Using the 'count' method in `getNeighbors()`, we would get an intraspecific competition value of 3, and an interspecific competition value of 5."}
 ggplot(datComp) +
   geom_sf(data = 
             suppressWarnings(sf::st_buffer(datComp[datComp$trackID == "HETCON_1922_6",], .1)), 
@@ -828,7 +860,7 @@ ggplot(datComp) +
  scale_color_discrete(type = c( "#009E73", "#F0E442","#E69F00",  "#56B4E9", "#A6A6A6")) 
 ```
 
-```{r echo = FALSE, warnings = FALSE, fig.width=7, fig.align = 'center', fig.cap = "**Figure 3.3**: *The 10cm buffer around the focal individual overlaps with 5 other unique individuals of two species. The overlapping area is shaded in grey. Using the 'area' method in `getNeighbors()`, we would get an intraspecific competition metric of 0.0454, and an interspecific competition metric of 0.0462.*"}
+```{r echo = FALSE, warnings = FALSE, fig.width=6, fig.align = 'center', fig.cap = "Figure 3.3: The 10cm buffer around the focal individual overlaps with 5 other unique individuals of two species. The overlapping area is shaded in grey. Using the 'area' method in `getNeighbors()`, we would get an intraspecific competition metric of 0.0454, and an interspecific competition metric of 0.0462."}
 areaMethodTemp <- suppressWarnings(st_intersection(st_buffer(
   datComp[datComp$trackID == "HETCON_1922_6",], .1), datComp))
 areaMethod <- areaMethodTemp[areaMethodTemp$trackID.1 != "HETCON_1922_6",]
@@ -906,7 +938,9 @@ if the column in your version of `dat` that contains the species identity of
 each observation is called "species_names", then the argument 
 `species = "species_names"` must be included in your call to `getNeighbors()`. 
 
-### *3.2* Function outputs 
+<a id="getNeigh_out"></a>
+
+#### *3.2* Function outputs 
 
 The output of `getNeighbors()` is an `sf` data frame that is identical to the 
 input `dat`, but with either one or two additional columns. If 
@@ -985,7 +1019,9 @@ datOut[1:5,]
 
 ___
 
-## *4* Next steps
+<a id="next"></a>
+
+### *4* Next steps
 At this point, this dataset should be ready for you to use in any applications 
 wish! There are a few additional functions that may help you in your analyses, 
 and these are outlined in this section. 
