--- a/README.Rmd
+++ b/README.Rmd
@@ -13,23 +13,27 @@ knitr::opts_chunk$set(
 )
 ```
 
-# plantTracker
-Welcome to plantTracker! This package was designed to transform long-term 
+```{r, include = FALSE}
+library(devtools)
+devtools::source_gist("c83e078bf8c81b035e32c3fc0cf04ee8", 
+                      filename = 'render_toc.R')
+```
+
+# `plantTracker`
+Welcome to `plantTracker`! This package was designed to transform long-term 
 quadrat maps that show plant occurrence and size into demographic data that can 
 be used to answer questions about population and community ecology. 
-This vignette is designed to help you use plantTracker functions to move from a 
-spatially referenced dataset containing plant cover data, to an output dataset 
-that contains growth and survival data for each observed individual. 
 
-This vignette will walk you through the steps to get from maps of plant cover 
-to a demographic dataset that you can use for analysis!
-
+# Table of Contents 
+```{r toc, echo=FALSE} 
+render_toc("README.Rmd")
+```
 <!-- badges: start -->
 <!-- badges: end -->
 
 ## Installation
 
-You can install the development version of plantTracker from 
+You can install the development version of `plantTracker` from 
 [GitHub](https://github.com/) with: 
 
 ``` r
@@ -37,14 +41,14 @@ install.packages("devtools")
 devtools::install_github("aestears/plantTracker")
 ```
 
-plantTracker will also be available to download form CRAN in the near future 
+`plantTracker` will also be available to download form CRAN in the near future 
 (hopefully...), so stay tuned! 
 
 
-## How to use the plantTracker R package
-The material below explains how to use plantTracker, starting with formatting 
+## How to use the `plantTracker` R package
+The material below explains how to use `plantTracker`, starting with formatting 
 your data correctly. This information is also available in the 'Suggested 
-plantTracker Workflow' vignette, which is included in the package. 
+`plantTracker` Workflow' vignette, which is included in the package. 
 
 ```{r setup, include = FALSE}
 library(plantTracker)
@@ -120,7 +124,6 @@ rownames(dataShow) <- NULL
 * Note: that the required columns are "Species", "Site", "Quad", "Year", and
 "geometry". The additional columns "Type" and "sp_code_6" are just "along for 
 the ride" in any analysis using `plantTracker` functions. 
-
 
 Here's what some of the example `dat` data (from the "SG2" quadrat at the 
 "AZ" site in 1922) look like when plotted spatially:    
