updating bugs in readme

--- a/README.Rmd
+++ b/README.Rmd
@@ -32,10 +32,12 @@ Welcome to `plantTracker`! This package was designed to transform **long-term qu
     * [Understanding the output of `trackSpp()`](#getNeigh_out)
   * [Further analysis with more `plantTracker` functions](#next)
 
+
 <a id="Installation"></a>
+
 ## Installation
 
-You can install the development version of `plantTracker` from 
+You can install the current version of `plantTracker` from 
 [GitHub](https://github.com/) with: 
 ``` r
 install.packages("devtools")
